--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Lacov's Blog"
 title_separator          : "-"
 name                     : "hyeonsulee"
 description              : "An amazing website."
@@ -101,10 +101,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "hyeonsulee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "@NaverWebtoon"
+  location         : "Seongnam"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
